# feednix

./: .feedly-connect.h.swp  AUTHORS  ChangeLog  CursesProvider.cpp  CursesProvider.h  FeedlyProvider.cpp  FeedlyProvider.h  INSTALL  Makefile  PKGBUILD  README.md  autogen.sh  config.json  configure.ac  feedly-client.cpp  main.cpp
src/: .CursesProvider.cpp.swp  .CursesProvider.h.swp  .FeedlyProvider.cpp.swp  .FeedlyProvider.h.swp  .main.cpp.swp  CursesProvider.cpp  CursesProvider.h  FeedlyProvider.cpp  FeedlyProvider.h  Makefile  Makefile.am  Makefile.in  a.out  main.cpp
src/.deps/: feednix-CursesProvider.Po  feednix-FeedlyProvider.Po  feednix-main.Po
